testdata/baselines/reference/tests_cases_conformance_externalModules_typeOnly_namespaceImportTypeQuery4.ts.ast
SourceFile
  ImportDeclaration
    ImportClause
      NamedImports
        ImportSpecifier
          Identifier: ' A'
    StringLiteral
  TypeAliasDeclaration
    Identifier: ' A'
    LiteralType
      NumericLiteral
  ExportDeclaration
    NamedExports
      ExportSpecifier
        Identifier: ' A'
  ClassDeclaration
    ExportKeyword
    Identifier: ' B'
  EmptyStatement
  ImportDeclaration
    ImportClause
      NamespaceImport
        Identifier: ' types'
    StringLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' t'
        TypeQuery
          Identifier: ' types'
        ObjectLiteralExpression
          PropertyAssignment
            Identifier: '
  A'
            AsExpression
              Identifier: ' undefined'
              AnyKeyword
          PropertyAssignment
            Identifier: ' // error
  B'
            AsExpression
              Identifier: ' undefined'
              AnyKeyword
